--- a/public/css/_healtcare.scss
+++ b/public/css/_healtcare.scss
@@ -1,6 +1,44 @@
-.mainHeaderPharma_contain h3 {
-  width: 500px;
+.mainHeaderHealtcare {
+  height: 550px;
+  background: url(../images/slides/woman-web_crop-min.jpg) no-repeat;
+  background-size: 170%;
+  background-position: right 35% bottom 82%;
+}
+
+.mainHeaderHealtcare_contain {
+  display: block;
+  position: relative;
+  top: 45%;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
   text-align: center;
+  color: white;
+  span {
+    display: block;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 8px;
+    line-height: 19.6px;
+    font-family: GothamBook;
+    margin: 0 0 12px 0;
+  }
+}
+
+.mainHeaderHealtcare_contain h3 {
+  font-size: 80px;
+  line-height: 70px;
+  font-family: League;
+  font-weight: 400;
+  width: 350px;
+  text-align: center;
+}
+.mainHeaderHealtcare_contain input {
+  margin-top: 20px;
+  width: 200px;
+  height: 50px;
+  @include btnVert;
+  font-size: 16px;
 }
 
 .menuFixedHealt {
@@ -99,6 +137,22 @@
       display: flex;
       flex-wrap: nowrap;
       justify-content: space-between;
+      .listeNumber_card {
+        width: 25%;
+      }
+      span {
+        min-width: 200px;
+        font-size: 60px;
+        font-family: League;
+        color: $vertFonce;
+        z-index: 0;
+      }
+      p {
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: -0.04px;
+      }
     }
   }
   .contain_L_4 {
@@ -107,16 +161,22 @@
     padding-bottom: 30px;
     h4 {
       display: inline-block;
+      margin-left: 25px;
+      font-size: 20px;
     }
     .tiroir1,
     .tiroir2 {
       border-top: 1px solid black;
       padding-top: 25px;
+      cursor: pointer;
+      transition: all 1s ease;
     }
     .tiroir3 {
       border-top: 1px solid black;
       border-bottom: 1px solid black;
       padding-top: 25px;
+      cursor: pointer;
+      transition: all 1s ease;
     }
     .iconeTiroir1 {
       position: relative;
@@ -135,6 +195,39 @@
       border-right: 2px solid $vertClair;
       width: 2px;
       height: 25px;
+    }
+  }
+  .relatedLinks {
+    max-width: 650px;
+    display: flex;
+    justify-content: space-between;
+    h4 {
+      display: inline;
+      color: $vertFonce;
+      font-family: League;
+      line-height: 30px;
+      font-size: 30px;
+    }
+    ul {
+      display: inline;
+      li {
+        list-style-type: none;
+        a {
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 19px;
+          &::after {
+            content: "\002192";
+            color: $vertClair;
+            margin-left: 3px;
+            display: inline-block;
+            width: 0;
+          }
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
     }
   }
 }
@@ -169,15 +262,233 @@
     background-color: #9b3f90;
     margin-bottom: 25px;
   }
+
   .formulaire {
     background-color: #f5f5f5;
+    height: 875px;
+    padding-top: 25px;
+    form {
+      padding: 30px;
+    }
+    .formulaire_titre {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      border-bottom: 1px solid #d6d6d6;
+      padding-left: 25px;
+      padding-bottom: 25px;
+    }
+    .formulaire_t {
+      display: block;
+      font-size: 20px;
+      margin-left: 10px;
+    }
+    .formulaire_imgLettre {
+      display: inline-block;
+      background: url(../images/letter.JPG) no-repeat center/cover;
+      height: 40px;
+      width: 40px;
+    }
+    .formulaire_libelle {
+      display: block;
+      font-size: 12px;
+      color: #8b8b8b;
+      margin-bottom: 15px;
+    }
+    .formulaire_sousTitre {
+      display: inline-block;
+      font-size: 18px;
+      color: #5f5f5f;
+      margin-bottom: 15px;
+    }
+    .formulaire_input {
+      display: block;
+      width: 100%;
+      border: 1px solid #d6d6d6;
+      border-radius: 50px;
+      height: 50px;
+      margin-bottom: 15px;
+      color: black;
+      padding: 15px 15px 15px 25px;
+      font-size: 14px;
+      font-weight: normal;
+      background-color: white;
+      outline: none;
+      &:after {
+        content: "^";
+        float: right;
+      }
+    }
+    .formulaire_combo1,
+    .formulaire_combo2,
+    .formulaire_combo3 {
+      cursor: pointer;
+      user-select: none;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      padding-right: 25px;
+    }
+    textarea {
+      max-width: 100%;
+      min-width: 100%;
+      max-height: 125px;
+      min-height: 125px;
+      border: 1px solid #d6d6d6;
+      border-radius: 20px;
+      padding: 15px 15px 15px 25px;
+      outline: none;
+    }
+    .formulaire_btn {
+      @include btnVert;
+      margin-top: 25px;
+      margin-left: auto;
+      margin-right: auto;
+      height: 50px;
+      width: 100%;
+    }
+  }
+}
+
+.formulaire_sousMenu1 {
+  width: 345px;
+  position: absolute;
+  border: 1px solid #d6d6d6;
+  border-radius: 20px;
+  height: 280px;
+  top: 1450px;
+  color: black;
+  padding: 15px 0px 15px 20px;
+  font-size: 14px;
+  font-weight: normal;
+  background-color: white;
+  overflow-y: scroll;
+  visibility: hidden;
+  li {
+    position: relative;
+    list-style-type: none;
+    left: -25px;
+  }
+  .formulaire_option1 {
+    padding: 8px 5px 8px 5px;
+    &:hover {
+      background-color: #e7e7e7;
+    }
+  }
+  /* width */
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  /* Track */
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: #d4d4d4;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $vertClair;
+    border-radius: 10px;
+  }
+}
+
+.formulaire_sousMenu2 {
+  width: 345px;
+  position: absolute;
+  border: 1px solid #d6d6d6;
+  border-radius: 20px;
+  height: 280px;
+  top: 1515px;
+  color: black;
+  padding: 15px 0px 15px 20px;
+  font-size: 14px;
+  font-weight: normal;
+  background-color: white;
+  overflow-y: scroll;
+  visibility: hidden;
+  li {
+    position: relative;
+    list-style-type: none;
+    left: -25px;
+  }
+  .formulaire_option2 {
+    padding: 8px 5px 8px 5px;
+    &:hover {
+      background-color: #e7e7e7;
+    }
+  }
+  /* width */
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  /* Track */
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: #d4d4d4;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $vertClair;
+    border-radius: 10px;
+  }
+}
+
+.formulaire_sousMenu3 {
+  width: 345px;
+  position: absolute;
+  border: 1px solid #d6d6d6;
+  border-radius: 20px;
+  height: 200px;
+  top: 1580px;
+  color: black;
+  padding: 15px 0px 15px 20px;
+  font-size: 14px;
+  font-weight: normal;
+  background-color: white;
+  overflow-y: scroll;
+  visibility: hidden;
+  li {
+    position: relative;
+    list-style-type: none;
+    left: -25px;
+  }
+  .formulaire_option3 {
+    padding: 8px 5px 8px 5px;
+    &:hover {
+      background-color: #e7e7e7;
+    }
+  }
+  /* width */
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  /* Track */
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: #d4d4d4;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $vertClair;
+    border-radius: 10px;
   }
 }
 
 .tiroirReduce {
-  height: 80px;
+  max-height: 80px;
 }
 
 .hideText {
   visibility: hidden;
+}
+.show {
+  visibility: visible;
 }
