patient group page

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,6 +7,7 @@
 @import "./mission";
 @import "./pharmaceutical";
 @import "./healtcare";
+@import "./patientGroup";
 @import "./main";
 
 @font-face {
