--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -8,6 +8,8 @@
 @import "./pharmaceutical";
 @import "./healtcare";
 @import "./patientGroup";
+@import "./patient";
+@import "./products";
 @import "./main";
 
 @font-face {
