--- a/public/css/_products.scss
+++ b/public/css/_products.scss
@@ -59,6 +59,7 @@
     font-size: 16px;
     line-height: 30px;
     margin-bottom: 30px;
+    color: $grey-hoki;
   }
   ul {
     margin-bottom: 30px;
