--- a/public/css/_patientGroup.scss
+++ b/public/css/_patientGroup.scss
@@ -83,6 +83,7 @@
     font-size: 16px;
     line-height: 30px;
     margin-bottom: 30px;
+    color: $grey-hoki;
   }
   ul {
     margin-bottom: 30px;
@@ -92,6 +93,7 @@
     font-size: 16px;
     line-height: 30px;
     list-style-type: circle;
+    color: $grey-hoki;
   }
 }
 
