--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -66,3 +66,17 @@ html {
   color: white;
   background: black;
 }
+
+.btnVert {
+  text-align: center;
+  border-radius: 30px;
+  background-color: $vertClair;
+  cursor: pointer;
+  transition: all 1s ease;
+  height: 50px;
+  width: 200px;
+  margin-top: 15px;
+  &:hover {
+    background-color: $green-darker;
+  }
+}
