about terminé avec JS
+ modif dans la css

--- a/public/css/_products.scss
+++ b/public/css/_products.scss
@@ -32,7 +32,8 @@
   text-align: center;
 }
 
-.containerProducts {
+.containerProducts,
+.containerAbout {
   margin-top: 25px;
   padding: 0 10px 0 10px;
   max-width: 1250px;
