--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,15 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;600&display=swap");
 @import url("https://use.typekit.net/mwf7moh.css");
 
-@import "./variables";
+@import "./shared/variables";
 @import "./shared/header";
 @import "./shared/footer";
+@import "./shared/tiroir";
+@import "./shared/menuFixe";
 @import "./mission";
 @import "./pharmaceutical";
 @import "./healtcare";
 @import "./patientGroup";
 @import "./patient";
 @import "./products";
+@import "./about";
 @import "./main";
 
 @font-face {
