--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3030,6 +3030,70 @@
   text-decoration: underline;
 }
 
+.mainHeaderrOurBrands {
+  height: 400px;
+  background: url(../images/banner-sm-green.jpg) no-repeat center/cover;
+}
+
+.mainHeaderOurBrands_contain {
+  display: block;
+  position: relative;
+  top: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  text-align: center;
+  color: white;
+}
+.mainHeaderOurBrands_contain span {
+  display: block;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 8px;
+  line-height: 19.6px;
+  font-family: GothamBook;
+  margin: 0 0 12px 0;
+}
+
+.mainHeaderOurBrands_contain h3 {
+  font-size: 80px;
+  line-height: 70px;
+  font-family: League;
+  font-weight: 400;
+  width: 500px;
+  text-align: center;
+}
+
+.containerOurBrands {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.containerOurBrands_title p {
+  text-align: center;
+  font-size: 25px;
+  margin: 25px 0;
+}
+
+.listBrands {
+  display: block;
+}
+.listBrands .cardBrands {
+  display: flex;
+  margin: 25px 0;
+  padding: 25px 0;
+  border-bottom: 1px solid #dadada;
+}
+.listBrands .cardBrands img {
+  width: 250px;
+  height: 80px;
+}
+.listBrands .cardBrands p {
+  margin-bottom: 40px;
+  margin-left: 50px;
+  font-size: 18px;
+}
+
 /****************************************/
 .container {
   position: relative;
