--- a/public/css/_ourBrands.scss
+++ b/public/css/_ourBrands.scss
@@ -41,14 +41,24 @@
   text-align: center;
   font-size: 25px;
   margin: 25px 0;
+  line-height: 40px;
+  color: #001b2b;
+  a {
+    text-decoration: underline;
+    font-size: 25px;
+  }
 }
 
 .listBrands {
   display: block;
+  a {
+    text-decoration: underline;
+    font-size: 16px;
+  }
   .cardBrands {
     display: flex;
-    margin: 25px 0;
-    padding: 25px 0;
+    margin: 15px 0;
+    padding: 20px 0;
     border-bottom: 1px solid rgb(218, 218, 218);
     img {
       width: 250px;
@@ -56,8 +66,13 @@
     }
     p {
       margin-bottom: 40px;
+      font-size: 16px;
+      line-height: 30px;
+      color: $grey-hoki;
+    }
+    .cardBrands_details {
+      width: 800px;
       margin-left: 50px;
-      font-size: 18px;
     }
   }
 }
