--- a/public/css/_formulaire.scss
+++ b/public/css/_formulaire.scss
@@ -3,6 +3,7 @@
   background-color: #f5f5f5;
   max-height: 875px;
   margin-right: 20px;
+  margin-bottom: 20px;
   .titleGetInTouch {
     display: flex;
     flex-wrap: nowrap;
