find a medicine sous menu
+ page new zealand

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -6,6 +6,8 @@
 @import "./shared/footer";
 @import "./shared/tiroir";
 @import "./shared/menuFixe";
+@import "./menuGauche";
+@import "./ourSustain";
 @import "./locations";
 @import "./formulaire";
 @import "./mission";
