--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1828,6 +1828,20 @@
   background-color: #7ac512;
 }
 
+@media all and (max-width: 990px) {
+  .containL {
+    width: 100%;
+  }
+
+  .containR {
+    min-width: 95%;
+    margin: 0 auto;
+  }
+
+  .mainContent {
+    flex-wrap: wrap;
+  }
+}
 .sousMenu1 {
   display: inline-block;
   position: absolute;
